[package]
name = "fstimes"
version = "0.1.1"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
chrono = "0.4.35"
clap = { version = "~4.4.18", default-features = false, features = ["derive", "cargo", "error-context", "help", "std", "suggestions", "usage"] }
walkdir = "2"

[profile.release]
debug = 0
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
